static/less/main.less
@import "variables.less";
@import "animations.less";
@import "fonts.less";
@import "footer.less";
@import "buttons.less";
@import "nav.less";
@import "header.less";
@import "content.less";
@import "jsonld.less";
@import "marc.less";
@import "login.less";
@import "modals.less";
@import "dialogs.less";
@import "popover.less";
@import "startpage.less";
@import "hitlist.less";
@import "editform.less";
@import "holdings.less";
@import "bibview.less";
@import "search.less";
@import "alert.less";
@import "iespecific.less";

//override
@import "autocomplete.less";
@import "experimental.less"; // for testing purposes only 


// GENERAL START -------------------------

html { -webkit-font-smoothing:antialiased; }

body{font-family: @paragraph-font, arial, sans-serif; font-size:14px; line-height: 20px; color:@grey-very-dark;}

h1,
h2,
h3{font-family: @header-font, georgia, serif; }
h4{font-size:15px; }

.label {font-weight: 400;margin-bottom: 10px; }
.lbl{ 
  display:block; 
  font-size:13px; 
  color:@grey-very-dark;
  margin-bottom:0;
  line-height:16px;  
  &:first-letter {
    text-transform: uppercase;
  }
}

a { cursor: pointer; }

.btn.disabled, .btn[disabled], fieldset[disabled] .btn{opacity:.85;}

//padding override bootstrap grid
.container{width:1080px;margin: 0 auto;padding:0;}
#grid{display:none; width:984px;min-height:800px;background:url(/static/img/grid.png);position:absolute;top:0;left:48px;}

//block unfinished elements, should not be in final release
a.beta-blocker {text-decoration: none; cursor:default;}
.todo{display:none!important}

#system-message-container {
	z-index: 9001; 
	position: absolute;
	margin: 90px auto;
	width: 100%;
	.alert {
		width: 420px;
	}
}

.alert  {
	  border: 1px solid @grey-light;
	  padding:12px 24px 12px 36px; 
	  margin: 6px auto 6px auto;
    border-radius: 0px;
	  background-color: @white;
	  box-shadow: none;
    span { 
    	display:block; 
    	white-space: pre-line; 
   	}
	i {
		float:left; 
		margin-left:-18px;
	}
}

.alert-info {
	background-color: @grey-warm;
	color: @grey-darker;
	i {color:@grey-dark;}
}

.alert-loading {
	position: absolute;  
	z-index: 10000; 
	top: 100px;
	left: 35%;
	height: 120px;
	width: 310px;
	border: 5px solid @grey-warm;
	color: @grey-very-dark;
	.loading-text {
		margin-top: 75px;
		text-align: center;
	}
}
	
.alert-warning {
	background-color: @yellow-lighter;
	border-color:@yellow;
	color: @yellow-dark;
	i {color:@yellow;}
}

.alert-error {
	background-color: @red-lighter; 
	border-color:@red-light;
	color: darken(@red, 20%);
	i {color:@red;}
}

.alert-dismissable .close {
  top:0;
  right:0;
}

.cg-busy-default-sign {
  background-color:@grey-warm;
  padding-left: 20px;
  padding-right: 20px;
}
.cg-busy-default-text {
  font-family: @paragraph-font, arial, sans-serif; font-size:14px; line-height: 20px; color:@grey-very-dark;
}
.cg-busy-default-spinner {
  left: 20px;
}
.modal-dialog .cg-busy-default-wrapper {
  margin-top: -20px; // Padding is 20 pixels inside modal
}

.bib-header {
	width: 96%;
	height: 135px;
	margin: 12px;
	position: relative;

	.identifiers { float: right; }
	// Identifiers, ellipsis on long fields
	.label.identifier{
  	width: 180px;
  	white-space: nowrap;
  	overflow: hidden;
  	color: @grey-very-dark;
  	text-align: right;
  	&.code {font-weight: 600;}
  	&.more {font-size: 12px;}
	}

	.label{padding-left: 1px;}
	.label{text-overflow:ellipsis;}
	.label:hover{border-color:@grey-lighter;}
	.label .lbl{color:@grey-dark;}
	.label.title{display:block;}
	.label.title .title-key {font-size:18px;line-height:22px;display:block;font-weight: 600;display:block;padding-bottom: 4px;}
	.label.title .title-subtitle {color:@green-dark; font-size: 14px; line-height: 18px;display: block;}
	.label .title-creator {color:@grey-darker;font-size: 14px; line-height: 18px;}
	.label.title .icon{font-size:16px;color:@green-light;}
	.label.title .lbl{margin-top:4px;}
	.label.contributors {padding-bottom: 0px; margin-bottom:18px;}
	.contributors ul {list-style: none;padding:0;margin:0;}
	.contributors ul li .primary-attribution {font-weight: 600;}
	.bottom {
	  color:@grey-dark;
	  font-size:14px;
	  background: @white;
	  position: absolute;
	  bottom: 0px;
	  height: 1em;
	}
}

.stickToTop {
	z-index: 100;
	margin: 0px !important;
	position: absolute;
	top: 12px;
	padding: 4px 4px 0px 5px;
	left: -32px;
	height: 85px;
	width: 1062px !important;
	.container {
		width: 100%;
		padding: 5px;
		border: 1px solid @grey-light;
		background-color: #FFFFFF;
		.shadow(rgba(86, 86, 86, 0.3));
		box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
		div {
			line-height: 1;
		}
	}
}

.langIcon {
	margin-right: 0.2em;
  border: 1px solid;
  border-radius: 5px;
  font-size: 12px;
  padding: 0px 2px 0px 2px;
  text-transform: uppercase;
  strong {
    font-size: 90%;
  }
}
#kundo_button {
	position: fixed;
	top: 200px;
	right: 0px;
}
.inline {
  display: inline;
}
/* GENERAL END ------------------------- */

